--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,15 +5,23 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:11-alpine
+        env:
+          POSTGRES_USER: monitoring_ci_user
+          POSTGRES_PASSWORD: monitoring_ci_password
+          POSTGRES_DB: monitoring
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5s
     steps:
     - uses: actions/checkout@v1
-    - uses: harmon758/postgresql-action@v1
-      with:
-        postgresql db: monitoring
-        postgresl user: monitoring_ci_user
-        postgresql password: monitoring_ci_password
-        DATABASE_URL: postgresql://monitoring_ci_user:monitoring_ci_password@localhost/monitoring  
-    - name: Build
-      run: cargo build --verbose        
     - name: Run tests
       run: cargo test --verbose
+      env:
+        DATABASE_URL: postgres://monitoring_ci_user:monitoring_ci_password@postgres:5432/monitoring        
+    - name: Build
+      run: cargo build --release
+      env:
+        DATABASE_URL: postgres://monitoring_ci_user:monitoring_ci_password@postgres:5432/monitoring
