--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,6 +19,10 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
     - uses: actions/checkout@v1
+    - name: Setup database
+      run: psql -h postgres -U monitoring_ci_user -d monitoring -a -f schema.sql
+      env:
+        PGPASSWORD: monitoring_ci_password
     - name: Run tests
       run: cargo test --verbose
       env:
