--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,7 +24,7 @@ jobs:
       env:
         PGPASSWORD: monitoring_ci_password
     - name: Run tests
-      run: cargo test --verbose
+      run: rustup install nightly && rustup default nightly && cargo test
       env:
         DATABASE_URL: postgres://monitoring_ci_user:monitoring_ci_password@postgres:5432/monitoring        
     - name: Build
