feat(ci): use publish docker image action

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,5 +32,8 @@ jobs:
       env:
         DATABASE_URL: postgres://monitoring_ci_user:monitoring_ci_password@postgres:5432/monitoring
     - name: Build docker image
-      run: docker login docker.pkg.github.com --username ${{ secrets.GITHUB_TOKEN }} && docker build -t docker.pkg.github.com/nikitavbv/simple-monitoring-agent/agent . && docker push docker.pkg.github.com/nikitavbv/simple-monitoring-agent/agent 
-    
+      uses: HurricanKai/Publish-Docker-Github-Action@master
+      with:
+        name: docker.pkg.github.com/nikitavbv/simple-monitoring-agent/agent
+        username: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ secrets.GITHUB_TOKEN }}
