--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,5 +35,6 @@ jobs:
       uses: HurricanKai/Publish-Docker-Github-Action@master
       with:
         name: docker.pkg.github.com/nikitavbv/simple-monitoring-agent/agent
+        registry: docker.pkg.github.com 
         username: ${{ secrets.GITHUB_TOKEN }}
         password: ${{ secrets.GITHUB_TOKEN }}
