--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ sqlx = { version = "0.2.4", features = [ "postgres", "chrono" ] }
 openssl = { version = "0.10.26", features = [ "vendored" ] }
 futures = "0.3.1"
 chrono = "0.4.10"
+log = "0.4.8"
+env_logger = "0.7.1"
