--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,8 +26,10 @@ jobs:
     - name: Run tests
       run: rustup install nightly && rustup default nightly && cargo test
       env:
-        DATABASE_URL: postgres://monitoring_ci_user:monitoring_ci_password@postgres:5432/monitoring        
+        DATABASE_URL: postgres://monitoring_ci_user:monitoring_ci_password@postgres:5432/monitoring
     - name: Clippy check
+      env:
+        DATABASE_URL: postgres://monitoring_ci_user:monitoring_ci_password@postgres:5432/monitoring
       run: rustup component add clippy && cargo clippy --all-targets --all-features -- -D warnings
     - name: Build
       run: cargo build --release
