--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,10 +35,17 @@ jobs:
       run: cargo build --release
       env:
         DATABASE_URL: postgres://monitoring_ci_user:monitoring_ci_password@postgres:5432/monitoring
-    - name: Build docker image
+    - name: Publish docker image to Github Packages
       uses: HurricanKai/Publish-Docker-Github-Action@master
       with:
         name: docker.pkg.github.com/nikitavbv/simple-monitoring-agent/agent
         registry: docker.pkg.github.com 
         username: ${{ secrets.GITHUB_TOKEN }}
         password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Publish docker image to Docker Hub
+      uses: HurricanKai/Publish-Docker-Github-Action@master
+      with:
+        name: nikitavbv/monitoring_agent
+        registry: docker.pkg.github.com
+        username: nikitavbv
+        password: ${{ secrets.docker_hub_token }}
