fix(agent): add missing dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ custom_error = "1.7.1"
 sqlx = { version = "0.2.4", features = [ "postgres", "chrono" ] }
 openssl = { version = "0.10.26", features = [ "vendored" ] }
 futures = "0.3.1"
-chrono = "0.4.10"
+chrono = { version = "0.4.11", fetures = [ "serde" ] }
 log = "0.4.8"
 env_logger = "0.7.1"
 http = "0.2.0"
@@ -21,5 +21,6 @@ hyper = "0.13.1"
 hyperlocal = { git = "https://github.com/softprops/hyperlocal" }
 serde = { version = "1.0.104", features = [ "derive" ] }
 serde_json = "1.0.45"
+serde_derive = "1.0.110"
 reqwest = { version = "0.10.1", features = [ "json", "rustls-tls" ] }
 async-trait = "0.1.24"
